--- a/05.html
+++ b/05.html
@@ -43,7 +43,7 @@
 <body>
     <div id="container" class="container-fluid text-center">
         <h1 class="mt-2"> 台灣全國農業旅遊休閒園區</h1>
-        <div class="d-flex justify-content-center align-items-center m-4">
+        <div class="d-flex justify-content-center align-items-center  m-4" style="flex-wrap: wrap">
             <h3 class="me-3">選擇查詢城市 : </h3>
             <div>
                 <select onchange="mainIdex()" class="form-select form-select-lg" aria-label=".form-select-lg example" style="width:20em;">
